[package]
name = "hydra"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

[dependencies]
leb128 = "0.2.1"
time = "0.1.0"
thread-id = "2.0.0"
signpost = { version = "0.1.0", optional = true }


# Enable debug information for profiling.
[profile.release]
debug = true

[features]
nightly = []
