[package]
name = "eep"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "Still a work-in-progress..."
documentation = "https://docs.rs/eep"
keywords = []
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/fitzgen/eep"

[dependencies]
leb128 = "0.2.1"
serde = "0.8.0"
thread-id = "2.0.0"
time = "0.1.0"

[dependencies.signpost]
version = "0.1.0"
optional = true

[dev-dependencies]
serde_json = "0.8.0"

# Enable debug information for profiling.
[profile.release]
debug = true

[features]
nightly = []
